# AutoDriving-DigitalTwin_2025_Project

./: README.md  requirements.txt
devel/: .catkin  setup.sh
devel/include/dcas_msgs/: Lane.h  LaneArray.h  Object.h  ObjectArray.h  RadarDetection.h  RadarDetectionArray.h  TrafficLight.h  TrafficLightArray.h  TrafficSign.h  TrafficSignArray.h  VehicleState.h
devel/include/ros_tutorial/: TutorialSineWaveInput.h  TutorialVehicleState.h
devel/lib/dcas_perception_sim/: env_traffic_light_node.py  sensor_radar_node.py  teleop_keyboard_node.py  vehicle_kinematic_node.py
devel/lib/pkgconfig/: dcas_lanelet_tutorial.pc  dcas_msgs.pc  dcas_perception_sim.pc  ros_tutorial.pc
devel/share/dcas_lanelet_tutorial/cmake/: dcas_lanelet_tutorialConfig.cmake
devel/share/dcas_msgs/cmake/: dcas_msgs-msg-paths.cmake  dcas_msgsConfig.cmake
devel/share/dcas_perception_sim/cmake/: dcas_perception_simConfig.cmake
devel/share/gennodejs/ros/dcas_msgs/msg/: Lane.js  (+11 more)
devel/share/ros_tutorial/cmake/: ros_tutorial-msg-paths.cmake  ros_tutorialConfig.cmake
devel/share/roseus/ros/dcas_msgs/: manifest.l
devel/share/roseus/ros/ros_tutorial/: manifest.l
docs/: TECHNICAL_OVERVIEW_kr.md
src/dcas_simulator/dcas_msgs/: CMakeLists.txt
src/dcas_simulator/dcas_msgs/msg/: Lane.msg  LaneArray.msg  Object.msg  ObjectArray.msg  RadarDetection.msg  RadarDetectionArray.msg  TrafficLight.msg  TrafficLightArray.msg  TrafficSign.msg  TrafficSignArray.msg  VehicleState.msg
src/dcas_simulator/dcas_perception_sim/: CMakeLists.txt  README_GNSS.md  README_IMU.md  README_LiDAR.md  README_MotionSensor.md  README_Radar.md  README_VehicleModel.md  README_kr.md  USAGE.md
src/dcas_simulator/dcas_perception_sim/config/: config.yaml
src/dcas_simulator/dcas_perception_sim/launch/: bringup.launch  final_project.launch
src/dcas_simulator/dcas_perception_sim/maps/: buildings.csv  gnss_shadow_zones.csv  guardrails.csv  lanes.csv  signs.csv  surrounding_vehicles.csv  traffic_lights.csv
src/dcas_simulator/dcas_perception_sim/rviz/: dcas_perception.rviz  final_project.rviz
src/dcas_simulator/dcas_perception_sim/scripts/: env_building_node.py  env_guardrail_node.py  env_lane_node.py  env_sign_node.py  env_surrounding_vehicle_node.py  env_traffic_light_node.py  sensor_camera_node.py  sensor_gnss_node.py  sensor_imu_node.py  sensor_lidar_node.py  sensor_motion_node.py  sensor_radar_node.py  teleop_keyboard_node.py  vehicleModel.py  vehicle_kinematic_node.py
src/dcas_simulator/dcas_perception_sim/scripts/final_project/: control_node.py  evaluation_node.py  lane_detection_node.py  scc_node.py
src/lanelet_tutorial/: CMakeLists.txt  README_Lanelet.md  package.xml
src/lanelet_tutorial/scripts/: lanelet_routing_node.py
src/ros_tutorial/: CMakeLists.txt
src/ros_tutorial/launch/: tutorial_demo.launch
src/ros_tutorial/msg/: TutorialSineWaveInput.msg  TutorialVehicleState.msg
src/ros_tutorial/scripts/: sine_wave_set_node.py
src/sensor_data_analysis/practice/: 1_dev_environment.ipynb  2_motion_sensor.ipynb  4_lidar.ipynb  5_radar.ipynb
src/sensor_data_analysis/practice/output/pcd/: sphere.pcd  sphere.ply  sphere.xyz
src/sensor_data_analysis/practice/tutlibs/camera/: custom_camera.py
src/sensor_data_analysis/practice/tutlibs/gnss/: custom_gnss.py
src/sensor_data_analysis/practice/tutlibs/lidar/: custom_lidar.py
src/tool/map_editor/: .gitignore  main.py
src/tool/map_editor/function/: editor.py  editor_base.py  editor_buildings.py  editor_gnss_shadow_zones.py  editor_guardrails.py  editor_lanes.py  editor_manager.py  editor_signs.py  editor_state.py  editor_surrounding_vehicles.py  editor_traffic_lights.py  plotting.py  structures.py  utils_io.py
(+63 files in other folders)
